set(CMAKE_INSTALL_RPATH .)
set(CMAKE_CXX_VISIBILITY_PRESET hidden)

include(CMakeDependentOption)

option(DOCWIRE_CLI "Build CLI" OFF)
option(DOCWIRE_OPENAI "Enable OpenAI Module" OFF)
cmake_dependent_option(ENABLE_OPENAI "Enable OpenAI Module" ON if(${DOCWIRE_CLI} OR ${DOCWIRE_OPENAI}) OFF)
option(DOCWIRE_LOCALAI "Enable Local AI Module" OFF)
cmake_dependent_option(ENABLE_LOCALAI "Enable Local AI Module" ON if(${DOCWIRE_CLI} OR ${DOCWIRE_LOCALAI}) OFF)
option(DOCWIRE_OCR "Enable OCR Module" OFF)
cmake_dependent_option(ENABLE_OCR "Enable OCR Module" ON if(${DOCWIRE_CLI} OR ${DOCWIRE_OCR}) OFF)
option(DOCWIRE_MAIL "Enable Mail Module" OFF)
cmake_dependent_option(ENABLE_MAIL "Enable Mail Module" ON if(${DOCWIRE_CLI} OR ${DOCWIRE_MAIL}) OFF)
option(DOCWIRE_PDF "Enable PDF Module" OFF)
cmake_dependent_option(ENABLE_PDF "Enable PDF Module" ON if(${DOCWIRE_CLI} OR ${DOCWIRE_PDF}) OFF)
option(DOCWIRE_HTTP "Enable HTTP Module" OFF)
cmake_dependent_option(ENABLE_HTTP "Enable HTTP Module" ON if(${DOCWIRE_CLI} OR ${DOCWIRE_HTTP} OR ${DOCWIRE_OPENAI}) OFF)

add_compile_definitions(DOCWIRE_ENABLE_SHORT_MACRO_NAMES)

add_subdirectory(wv2)
include(core.cmake)
include(base64.cmake)
include(odf_ooxml.cmake)
include(ole_office_formats.cmake)
include(html.cmake)
include(xml.cmake)
include(plain_text.cmake)
include(iwork.cmake)
include(xlsb.cmake)
include(rtf.cmake)
if(ENABLE_PDF)
	include(pdf.cmake)
endif()
include(office_formats.cmake)
if(ENABLE_OCR)
	include(ocr.cmake)
endif()
if(ENABLE_MAIL)
	include(mail.cmake)
endif()
include(archives.cmake)
if(ENABLE_LOCALAI)
	include(local_ai.cmake)
endif()
include(fuzzy_match.cmake)
include(content_type.cmake)
if(ENABLE_HTTP)
	include(http.cmake)
endif()
if(ENABLE_OPENAI)
	include(openai.cmake)
endif()
if(DOCWIRE_CLI)
	include(cli.cmake)
endif()

file(GLOB HEADERS "*.h")
list(REMOVE_ITEM HEADERS
	${CMAKE_CURRENT_SOURCE_DIR}/misc.h
	${CMAKE_CURRENT_SOURCE_DIR}/thread_safe_ole_storage.h
	${CMAKE_CURRENT_SOURCE_DIR}/thread_safe_ole_stream_reader.h)
install(FILES ${HEADERS} DESTINATION include/docwire)

set(CMAKE_INSTALL_UCRT_LIBRARIES TRUE)
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
	set(CMAKE_INSTALL_DEBUG_LIBRARIES TRUE)
	set(CMAKE_INSTALL_DEBUG_LIBRARIES_ONLY TRUE)
endif()

include(InstallRequiredSystemLibraries)

if (WIN32)
	install(PROGRAMS ${CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS} DESTINATION bin/docwire_system_libraries)
else()
	install(PROGRAMS ${CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS} DESTINATION lib/docwire_system_libraries)
endif()

include(CMakePackageConfigHelpers)
configure_package_config_file(
	docwire-config.cmake.in
	${CMAKE_CURRENT_BINARY_DIR}/docwire-config.cmake
	INSTALL_DESTINATION lib/cmake/docwire
)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/docwire-config.cmake DESTINATION lib/cmake/docwire)
install(EXPORT docwire_targets FILE docwire-targets.cmake DESTINATION lib/cmake/docwire)
